[metadata]
name = cairo-graphs 
version = 1.0.0
description = Library for graphs written in Cairo
author = msaug 
author_email = msaug@protonmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/msaug/cairo-graphs
platforms = any
classifiers =
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    importlib-metadata>=4.0

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
openzeppelin = "*.cairo"
